# esp32-lvgl-hid

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  check_and_copy.cmake  sdkconfig
.github/workflows/: build.yml
gui/__ui_project_name__/: sdkconfig  sdkconfig.old
gui/__ui_project_name__/main/: CMakeLists.txt  connect_mqtt.c  connect_mqtt.h  connect_wifi.c  esp_hardware.c  esp_hardware.h  esp_usb_hid.c  gui_buttons.c  gui_buttons.h  gui_textfields.c  gui_textfields.h  main.c
gui/__ui_project_name__/main/include/: app_common.h  connect_wifi.h  esp_usb_hid.h  gui_buttons.h  gui_textfields.h
gui/__ui_project_name__/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
gui/__ui_project_name__/main/ui/screens/: ui_Screen1.c
main/: CMakeLists.txt  aes_encrypt.c  ca_chain.pem  connect_mqtt.c  connect_wifi.c  esp_firmware.c  esp_usb_hid.c  gui_buttons.c  gui_textfields.c  idf_component.yml  main.c
main/include/: aes_encrypt.h  connect_mqtt.h  esp_firmware.h  esp_usb_hid.h  gui_buttons.h  gui_textfields.h  secret_credentials.h  secret_template.h
main/ui/: ui.c
main/ui/components/: ui_comp_hook.c
squareline/: SquareLine_GUI.sll  SquareLine_GUI.spj
squareline/SquareLine_GUI/: CMakeLists.txt
squareline/SquareLine_GUI/main/: main.c
